--- a/next-level-backend/package.json
+++ b/next-level-backend/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -25,7 +28,8 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
-    "next-level-backend": "file:",
+    "class-validator": "^0.14.1",
+    "libphonenumber-js": "^1.10.14",
     "pg": "^8.14.1",
     "postgres": "^3.4.5",
     "reflect-metadata": "^0.2.2",
