--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -9,9 +9,10 @@
     }
   ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "https://projetonextlevelscrum.onrender.com",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["vite/client"]
   }
 }
