--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.21.1",
     "framer-motion": "^12.5.0",
+    "lightningcss": "^1.29.3",
     "lucide-react": "^0.483.0",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
@@ -37,7 +38,7 @@
     "react-router-dom": "^7.4.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^3.3.5",
     "tw-animate-css": "^1.2.4",
     "zod": "^3.24.2"
   },
