--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -9,7 +9,7 @@
     }
   ],
   "compilerOptions": {
-    "baseUrl": "https://projetonextlevelscrum.onrender.com",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
     },
